--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.2.0-canary.61",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.0.6",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^10.2.0",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
