--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "healthcare-web",
   "version": "0.1.0",
-  "private": true,
+  "private": "true",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -29,5 +29,7 @@
     "postcss-nesting": "^10.2.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "npm@9.6.7",
+  "engines": "{\"node\": \">=18.0.0\", \"npm\": \">=9.0.0\"}"
 }
