--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "healthcare-web",
   "version": "0.1.0",
-  "private": "true",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
