--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "typescript": "^5"
   },
   "packageManager": "npm@9.6.7",
-  "engines": "{\"node\": \">=18.0.0\", \"npm\": \">=9.0.0\"}"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  }
 }
