--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "next": "15.2.0-canary.61",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -24,6 +23,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.2.0-canary.61",
+    "next": "^15.3.5",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^10.2.0",
