--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "next": "15.2.0-canary.61",
+    "next": "^15.2.0-canary.61",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
