--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.0.6",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
